--- a/archives/toutiao-search/2023-11-12.md
+++ b/archives/toutiao-search/2023-11-12.md
@@ -1,48 +1,74 @@
 # 2023-11-12
 
-共 127 条
+共 151 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Sun Nov 12 2023 08:27:07 GMT+0800 (China Standard Time) -->
-1. [果敢同盟军为什么这么能打](https://so.toutiao.com/search?keyword=果敢同盟军为什么这么能打)
-1. [家长吐槽冬季校服拆开里面全是薄膜](https://so.toutiao.com/search?keyword=家长吐槽冬季校服拆开里面全是薄膜)
-1. [让中国大市场成为世界大机遇](https://so.toutiao.com/search?keyword=让中国大市场成为世界大机遇)
-1. [两小男孩地铁玩卡片引一群大人围观](https://so.toutiao.com/search?keyword=两小男孩地铁玩卡片引一群大人围观)
-1. [“双十一”为什么越来越冷清](https://so.toutiao.com/search?keyword=“双十一”为什么越来越冷清)
-1. [大学生偷返高中 老师表情亮了](https://so.toutiao.com/search?keyword=大学生偷返高中+老师表情亮了)
-1. [温州民房坍塌3人遇难1人仍在搜救](https://so.toutiao.com/search?keyword=温州民房坍塌3人遇难1人仍在搜救)
+<!-- 最后更新时间 Sun Nov 12 2023 09:45:52 GMT+0800 (China Standard Time) -->
+1. [海口一镇长开会怒砸水瓶 当地回应](https://so.toutiao.com/search?keyword=海口一镇长开会怒砸水瓶+当地回应)
 1. [这届年轻人双11消费变了](https://so.toutiao.com/search?keyword=这届年轻人双11消费变了)
-1. [官方回应镇长开会与群众互拍桌子](https://so.toutiao.com/search?keyword=官方回应镇长开会与群众互拍桌子)
-1. [银行回应信用卡欠3.1万未还变40万](https://so.toutiao.com/search?keyword=银行回应信用卡欠3.1万未还变40万)
+1. [让中国大市场成为世界大机遇](https://so.toutiao.com/search?keyword=让中国大市场成为世界大机遇)
+1. [东北虎出没 黑龙江虎林发紧急通知](https://so.toutiao.com/search?keyword=东北虎出没+黑龙江虎林发紧急通知)
+1. [“双十一”为什么越来越冷清](https://so.toutiao.com/search?keyword=“双十一”为什么越来越冷清)
+1. [宋云天拟任新职 曾是清华学生会主席](https://so.toutiao.com/search?keyword=宋云天拟任新职+曾是清华学生会主席)
+1. [大批中国公民滞留俄罗斯？官方回应](https://so.toutiao.com/search?keyword=大批中国公民滞留俄罗斯？官方回应)
+1. [双十一战报出炉 天猫访问用户超8亿](https://so.toutiao.com/search?keyword=双十一战报出炉+天猫访问用户超8亿)
+1. [俩学生架着老师回教室上晚自习](https://so.toutiao.com/search?keyword=俩学生架着老师回教室上晚自习)
+1. [果敢同盟军为什么这么能打](https://so.toutiao.com/search?keyword=果敢同盟军为什么这么能打)
 1. [以方与哈马斯互指对方袭击希法医院](https://so.toutiao.com/search?keyword=以方与哈马斯互指对方袭击希法医院)
 1. [官方辟谣民政局工作人员打骂群众](https://so.toutiao.com/search?keyword=官方辟谣民政局工作人员打骂群众)
 1. [男子殴打怀孕妻子 两儿子跪地哭喊](https://so.toutiao.com/search?keyword=男子殴打怀孕妻子+两儿子跪地哭喊)
 1. [“女子遭副会长强奸”涉事纪检干部被查](https://so.toutiao.com/search?keyword=“女子遭副会长强奸”涉事纪检干部被查)
+1. [两小男孩地铁玩卡片引一群大人围观](https://so.toutiao.com/search?keyword=两小男孩地铁玩卡片引一群大人围观)
+1. [孩子考了44分 妈妈无奈哭诉](https://so.toutiao.com/search?keyword=孩子考了44分+妈妈无奈哭诉)
+1. [大学生偷返高中 老师表情亮了](https://so.toutiao.com/search?keyword=大学生偷返高中+老师表情亮了)
+1. [银行回应信用卡欠3.1万未还变40万](https://so.toutiao.com/search?keyword=银行回应信用卡欠3.1万未还变40万)
+1. [家长吐槽冬季校服拆开里面全是薄膜](https://so.toutiao.com/search?keyword=家长吐槽冬季校服拆开里面全是薄膜)
 1. [马斯克就反攻给泽连斯基提建议](https://so.toutiao.com/search?keyword=马斯克就反攻给泽连斯基提建议)
-1. [国家一级导演车径行去世](https://so.toutiao.com/search?keyword=国家一级导演车径行去世)
+1. [美议员被批煽动巴勒斯坦人种族灭绝](https://so.toutiao.com/search?keyword=美议员被批煽动巴勒斯坦人种族灭绝)
 1. [京东：约300个品牌销售额破亿](https://so.toutiao.com/search?keyword=京东：约300个品牌销售额破亿)
 1. [房地产政策效果正在显现](https://so.toutiao.com/search?keyword=房地产政策效果正在显现)
-1. [小杨哥称本周日将搬入亿元购新楼](https://so.toutiao.com/search?keyword=小杨哥称本周日将搬入亿元购新楼)
-1. [老虎出没 村民喂狗发现只剩狗头](https://so.toutiao.com/search?keyword=老虎出没+村民喂狗发现只剩狗头)
 1. [沙特王储呼吁尽快结束巴以冲突](https://so.toutiao.com/search?keyword=沙特王储呼吁尽快结束巴以冲突)
+1. [校方回应女生在图书馆占16座还骂人](https://so.toutiao.com/search?keyword=校方回应女生在图书馆占16座还骂人)
+1. [温州民房坍塌4人遇难](https://so.toutiao.com/search?keyword=温州民房坍塌4人遇难)
+1. [伊朗：是时候就加沙局势采取行动了](https://so.toutiao.com/search?keyword=伊朗：是时候就加沙局势采取行动了)
+1. [天猫称双11订单量成交总额全面增长](https://so.toutiao.com/search?keyword=天猫称双11订单量成交总额全面增长)
+1. [麻省理工亲巴组织阻止犹太学生上课](https://so.toutiao.com/search?keyword=麻省理工亲巴组织阻止犹太学生上课)
+1. [男子喂猪时晕倒 遭猪啃食下半身](https://so.toutiao.com/search?keyword=男子喂猪时晕倒+遭猪啃食下半身)
+1. [“双11”透视：“多巴胺经济”爆发](https://so.toutiao.com/search?keyword=“双11”透视：“多巴胺经济”爆发)
+1. [加沙最大医院39名婴儿因断电缺氧死亡](https://so.toutiao.com/search?keyword=加沙最大医院39名婴儿因断电缺氧死亡)
+1. [拜仁总监：凯恩是现象级球员](https://so.toutiao.com/search?keyword=拜仁总监：凯恩是现象级球员)
+1. [院士：计算机是怎么越来越快的](https://so.toutiao.com/search?keyword=院士：计算机是怎么越来越快的)
+1. [民警收到YYDS锦旗后表情绷不住了](https://so.toutiao.com/search?keyword=民警收到YYDS锦旗后表情绷不住了)
+1. [媒体评“强砍3万多棵树木无补偿”](https://so.toutiao.com/search?keyword=媒体评“强砍3万多棵树木无补偿”)
+1. [国家一级导演车径行去世](https://so.toutiao.com/search?keyword=国家一级导演车径行去世)
+1. [记者：快船让四球星首发没有好效果](https://so.toutiao.com/search?keyword=记者：快船让四球星首发没有好效果)
+1. [陕西回应强砍3万棵国槐：违规占用](https://so.toutiao.com/search?keyword=陕西回应强砍3万棵国槐：违规占用)
+1. [老人反对装电梯建好又想用被拒绝](https://so.toutiao.com/search?keyword=老人反对装电梯建好又想用被拒绝)
+1. [独生子推两个轮椅带双亲外出买菜](https://so.toutiao.com/search?keyword=独生子推两个轮椅带双亲外出买菜)
+1. [哈登：我需要10场比赛看看进展如何](https://so.toutiao.com/search?keyword=哈登：我需要10场比赛看看进展如何)
+1. [坍塌体育馆为何多次检查查不出问题](https://so.toutiao.com/search?keyword=坍塌体育馆为何多次检查查不出问题)
+1. [父亲减重20斤割肝救女今日手术](https://so.toutiao.com/search?keyword=父亲减重20斤割肝救女今日手术)
+1. [小杨哥称本周日将搬入亿元购新楼](https://so.toutiao.com/search?keyword=小杨哥称本周日将搬入亿元购新楼)
+1. [杜兰特：比尔的状态令人惊喜](https://so.toutiao.com/search?keyword=杜兰特：比尔的状态令人惊喜)
+1. [曼联近5场英超4胜仅负曼城](https://so.toutiao.com/search?keyword=曼联近5场英超4胜仅负曼城)
+1. [皇马5-1瓦伦数据对比：射门16-10](https://so.toutiao.com/search?keyword=皇马5-1瓦伦数据对比：射门16-10)
+1. [国足36强赛首战泰国目标带回3分](https://so.toutiao.com/search?keyword=国足36强赛首战泰国目标带回3分)
+1. [英媒为曼联评分：林德洛夫8分最高](https://so.toutiao.com/search?keyword=英媒为曼联评分：林德洛夫8分最高)
+1. [温州民房坍塌3人遇难1人仍在搜救](https://so.toutiao.com/search?keyword=温州民房坍塌3人遇难1人仍在搜救)
+1. [官方回应镇长开会与群众互拍桌子](https://so.toutiao.com/search?keyword=官方回应镇长开会与群众互拍桌子)
+1. [老虎出没 村民喂狗发现只剩狗头](https://so.toutiao.com/search?keyword=老虎出没+村民喂狗发现只剩狗头)
 1. [马克龙呼吁以色列停止轰炸加沙平民](https://so.toutiao.com/search?keyword=马克龙呼吁以色列停止轰炸加沙平民)
 1. [沙特-非洲峰会呼吁实现加沙停火](https://so.toutiao.com/search?keyword=沙特-非洲峰会呼吁实现加沙停火)
 1. [70个国家和地区呼吁结束巴以冲突](https://so.toutiao.com/search?keyword=70个国家和地区呼吁结束巴以冲突)
 1. [以方称哈马斯已失去对加沙北部控制](https://so.toutiao.com/search?keyword=以方称哈马斯已失去对加沙北部控制)
-1. [伊朗：是时候就加沙局势采取行动了](https://so.toutiao.com/search?keyword=伊朗：是时候就加沙局势采取行动了)
 1. [厄尔尼诺已形成 今年或破最暖年纪录](https://so.toutiao.com/search?keyword=厄尔尼诺已形成+今年或破最暖年纪录)
-1. [加沙最大医院39名婴儿因断电缺氧死亡](https://so.toutiao.com/search?keyword=加沙最大医院39名婴儿因断电缺氧死亡)
 1. [女方悔婚不退彩礼被砍杀？警方介入](https://so.toutiao.com/search?keyword=女方悔婚不退彩礼被砍杀？警方介入)
 1. [钟南山说有6种新冠病毒疫苗可选择](https://so.toutiao.com/search?keyword=钟南山说有6种新冠病毒疫苗可选择)
 1. [加沙地带已有超过1.1万人死亡](https://so.toutiao.com/search?keyword=加沙地带已有超过1.1万人死亡)
-1. [校方回应女生在图书馆占16座还骂人](https://so.toutiao.com/search?keyword=校方回应女生在图书馆占16座还骂人)
-1. [陕西回应强砍3万棵国槐：违规占用](https://so.toutiao.com/search?keyword=陕西回应强砍3万棵国槐：违规占用)
 1. [三家人权组织状告以色列](https://so.toutiao.com/search?keyword=三家人权组织状告以色列)
-1. [男子喂猪时晕倒 遭猪啃食下半身](https://so.toutiao.com/search?keyword=男子喂猪时晕倒+遭猪啃食下半身)
 1. [美国一女子将已故丈夫骨灰植入体内](https://so.toutiao.com/search?keyword=美国一女子将已故丈夫骨灰植入体内)
 1. [以军称控制哈马斯前哨基地](https://so.toutiao.com/search?keyword=以军称控制哈马斯前哨基地)
 1. [欧文谈快船：他们会有疯狂的连胜](https://so.toutiao.com/search?keyword=欧文谈快船：他们会有疯狂的连胜)
-1. [麻省理工亲巴组织阻止犹太学生上课](https://so.toutiao.com/search?keyword=麻省理工亲巴组织阻止犹太学生上课)
 1. [佛山贩卖出生证医院负责人被刑拘](https://so.toutiao.com/search?keyword=佛山贩卖出生证医院负责人被刑拘)
 1. [女子洗澡洗出个“鸟病”？医生提醒](https://so.toutiao.com/search?keyword=女子洗澡洗出个“鸟病”？医生提醒)
 1. [以方罕见公开回击美方](https://so.toutiao.com/search?keyword=以方罕见公开回击美方)
@@ -51,7 +77,6 @@
 1. [老字号复核结果公布：55个被摘牌](https://so.toutiao.com/search?keyword=老字号复核结果公布：55个被摘牌)
 1. [马斯克：中国聪明勤奋的人比美国多](https://so.toutiao.com/search?keyword=马斯克：中国聪明勤奋的人比美国多)
 1. [华为Mate 60 RS瑞红款炒至3万元](https://so.toutiao.com/search?keyword=华为Mate+60 RS瑞红款炒至3万元)
-1. [海口一镇长开会怒砸水瓶 当地回应](https://so.toutiao.com/search?keyword=海口一镇长开会怒砸水瓶+当地回应)
 1. [张杰晒和三个女儿的背影照](https://so.toutiao.com/search?keyword=张杰晒和三个女儿的背影照)
 1. [6分钟连扳两球 狼队补时逆转热刺](https://so.toutiao.com/search?keyword=6分钟连扳两球+狼队补时逆转热刺)
 1. [跳楼自杀企业主疑含冤自证清白](https://so.toutiao.com/search?keyword=跳楼自杀企业主疑含冤自证清白)
@@ -78,7 +103,6 @@
 1. [14岁天才少女被喊话：国家队等你](https://so.toutiao.com/search?keyword=14岁天才少女被喊话：国家队等你)
 1. [高通与铱星取消合作](https://so.toutiao.com/search?keyword=高通与铱星取消合作)
 1. [小伙1万多斤红薯滞销急哭](https://so.toutiao.com/search?keyword=小伙1万多斤红薯滞销急哭)
-1. [独生子推两个轮椅带双亲外出买菜](https://so.toutiao.com/search?keyword=独生子推两个轮椅带双亲外出买菜)
 1. [专家：重视消化道早癌筛查](https://so.toutiao.com/search?keyword=专家：重视消化道早癌筛查)
 1. [加沙奥达医院医生用手机照明做手术](https://so.toutiao.com/search?keyword=加沙奥达医院医生用手机照明做手术)
 1. [日官员拟赴台 中方：勿发错误信号](https://so.toutiao.com/search?keyword=日官员拟赴台+中方：勿发错误信号)
