--- a/archives/toutiao-search/2023-11-12.md
+++ b/archives/toutiao-search/2023-11-12.md
@@ -1,66 +1,84 @@
 # 2023-11-12
 
-共 163 条
+共 178 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Sun Nov 12 2023 10:18:34 GMT+0800 (China Standard Time) -->
-1. [果敢同盟军为什么这么能打](https://so.toutiao.com/search?keyword=果敢同盟军为什么这么能打)
-1. [大批中国公民滞留俄罗斯？官方回应](https://so.toutiao.com/search?keyword=大批中国公民滞留俄罗斯？官方回应)
-1. [让中国大市场成为世界大机遇](https://so.toutiao.com/search?keyword=让中国大市场成为世界大机遇)
-1. [双十一战报出炉 天猫访问用户超8亿](https://so.toutiao.com/search?keyword=双十一战报出炉+天猫访问用户超8亿)
+<!-- 最后更新时间 Sun Nov 12 2023 11:00:42 GMT+0800 (China Standard Time) -->
 1. [温州民房坍塌4人遇难](https://so.toutiao.com/search?keyword=温州民房坍塌4人遇难)
+1. [低价硝烟下天猫京东公布双11战绩](https://so.toutiao.com/search?keyword=低价硝烟下天猫京东公布双11战绩)
+1. [让中国大市场成为世界大机遇](https://so.toutiao.com/search?keyword=让中国大市场成为世界大机遇)
+1. [果敢同盟军为什么这么能打](https://so.toutiao.com/search?keyword=果敢同盟军为什么这么能打)
+1. [这届年轻人双11消费变了](https://so.toutiao.com/search?keyword=这届年轻人双11消费变了)
+1. [毒地块居民称120万买房85万没人要](https://so.toutiao.com/search?keyword=毒地块居民称120万买房85万没人要)
+1. [大批中国公民滞留俄罗斯？官方回应](https://so.toutiao.com/search?keyword=大批中国公民滞留俄罗斯？官方回应)
+1. [“双十一”为什么越来越冷清](https://so.toutiao.com/search?keyword=“双十一”为什么越来越冷清)
+1. [东北一校8名男生集体穿军大衣上课](https://so.toutiao.com/search?keyword=东北一校8名男生集体穿军大衣上课)
+1. [两小男孩地铁玩卡片引一群大人围观](https://so.toutiao.com/search?keyword=两小男孩地铁玩卡片引一群大人围观)
+1. [镇长砸水瓶后村民拍桌回怼？当地回应](https://so.toutiao.com/search?keyword=镇长砸水瓶后村民拍桌回怼？当地回应)
+1. [官方辟谣民政局工作人员打骂群众](https://so.toutiao.com/search?keyword=官方辟谣民政局工作人员打骂群众)
+1. [男子殴打怀孕妻子 两儿子跪地哭喊](https://so.toutiao.com/search?keyword=男子殴打怀孕妻子+两儿子跪地哭喊)
+1. [“女子遭副会长强奸”涉事纪检干部被查](https://so.toutiao.com/search?keyword=“女子遭副会长强奸”涉事纪检干部被查)
+1. [东北野生虎为何频繁下山](https://so.toutiao.com/search?keyword=东北野生虎为何频繁下山)
+1. [大学生偷返高中 老师表情亮了](https://so.toutiao.com/search?keyword=大学生偷返高中+老师表情亮了)
+1. [马斯克就反攻给泽连斯基提建议](https://so.toutiao.com/search?keyword=马斯克就反攻给泽连斯基提建议)
+1. [京东：约300个品牌销售额破亿](https://so.toutiao.com/search?keyword=京东：约300个品牌销售额破亿)
 1. [宋云天拟任新职 曾是清华学生会主席](https://so.toutiao.com/search?keyword=宋云天拟任新职+曾是清华学生会主席)
+1. [银行回应信用卡欠3.1万未还变40万](https://so.toutiao.com/search?keyword=银行回应信用卡欠3.1万未还变40万)
+1. [以方称哈马斯已失去对加沙北部控制](https://so.toutiao.com/search?keyword=以方称哈马斯已失去对加沙北部控制)
+1. [70个国家和地区呼吁结束巴以冲突](https://so.toutiao.com/search?keyword=70个国家和地区呼吁结束巴以冲突)
+1. [麻省理工亲巴组织阻止犹太学生上课](https://so.toutiao.com/search?keyword=麻省理工亲巴组织阻止犹太学生上课)
+1. [伊朗：是时候就加沙局势采取行动了](https://so.toutiao.com/search?keyword=伊朗：是时候就加沙局势采取行动了)
+1. [独生子推两个轮椅带双亲外出买菜](https://so.toutiao.com/search?keyword=独生子推两个轮椅带双亲外出买菜)
+1. [“双11”透视：“多巴胺经济”爆发](https://so.toutiao.com/search?keyword=“双11”透视：“多巴胺经济”爆发)
+1. [加沙最大医院39名婴儿因断电缺氧死亡](https://so.toutiao.com/search?keyword=加沙最大医院39名婴儿因断电缺氧死亡)
+1. [泰伦·卢谈失利：第二阵容比较矮小](https://so.toutiao.com/search?keyword=泰伦·卢谈失利：第二阵容比较矮小)
+1. [“和平友谊-2023”多国联演将举行](https://so.toutiao.com/search?keyword=“和平友谊-2023”多国联演将举行)
+1. [皇马5-1瓦伦数据对比：射门16-10](https://so.toutiao.com/search?keyword=皇马5-1瓦伦数据对比：射门16-10)
+1. [郑恺：旅行可以拉近人与人的距离](https://so.toutiao.com/search?keyword=郑恺：旅行可以拉近人与人的距离)
+1. [房地产政策效果正在显现](https://so.toutiao.com/search?keyword=房地产政策效果正在显现)
+1. [马英九出手促“蓝白合”内幕曝光](https://so.toutiao.com/search?keyword=马英九出手促“蓝白合”内幕曝光)
+1. [女子看守所探监 等待中吸毒被捕](https://so.toutiao.com/search?keyword=女子看守所探监+等待中吸毒被捕)
+1. [陕西回应强砍3万棵国槐：违规占用](https://so.toutiao.com/search?keyword=陕西回应强砍3万棵国槐：违规占用)
+1. [小琼斯：很高兴和东契奇同队](https://so.toutiao.com/search?keyword=小琼斯：很高兴和东契奇同队)
+1. [国家一级导演车径行去世](https://so.toutiao.com/search?keyword=国家一级导演车径行去世)
+1. [小米双11战报：支付金额破224亿元](https://so.toutiao.com/search?keyword=小米双11战报：支付金额破224亿元)
+1. [字母哥35+10+7 雄鹿不敌魔术](https://so.toutiao.com/search?keyword=字母哥35+10+7+雄鹿不敌魔术)
+1. [女方悔婚不退彩礼被砍杀？警方介入](https://so.toutiao.com/search?keyword=女方悔婚不退彩礼被砍杀？警方介入)
+1. [校方回应女生在图书馆占16座还骂人](https://so.toutiao.com/search?keyword=校方回应女生在图书馆占16座还骂人)
+1. [男子杀害工友潜入深山19年后落网](https://so.toutiao.com/search?keyword=男子杀害工友潜入深山19年后落网)
+1. [男子喂猪时晕倒 遭猪啃食下半身](https://so.toutiao.com/search?keyword=男子喂猪时晕倒+遭猪啃食下半身)
+1. [英媒为曼联评分：林德洛夫8分最高](https://so.toutiao.com/search?keyword=英媒为曼联评分：林德洛夫8分最高)
+1. [多国爆发床虱危机](https://so.toutiao.com/search?keyword=多国爆发床虱危机)
+1. [大四学生请假回家结婚](https://so.toutiao.com/search?keyword=大四学生请假回家结婚)
+1. [巴以新一轮冲突进入第36天](https://so.toutiao.com/search?keyword=巴以新一轮冲突进入第36天)
+1. [C罗破门 利雅得胜利七连胜](https://so.toutiao.com/search?keyword=C罗破门+利雅得胜利七连胜)
+1. [哈佛硕士生应聘教育部合同工](https://so.toutiao.com/search?keyword=哈佛硕士生应聘教育部合同工)
+1. [导演车径行去世前三天曾分享动态](https://so.toutiao.com/search?keyword=导演车径行去世前三天曾分享动态)
+1. [双十一战报出炉 天猫访问用户超8亿](https://so.toutiao.com/search?keyword=双十一战报出炉+天猫访问用户超8亿)
 1. [低价硝烟下天猫京东公布双11成绩](https://so.toutiao.com/search?keyword=低价硝烟下天猫京东公布双11成绩)
 1. [孩子考了44分 妈妈无奈哭诉](https://so.toutiao.com/search?keyword=孩子考了44分+妈妈无奈哭诉)
 1. [俩学生架着老师回教室上晚自习](https://so.toutiao.com/search?keyword=俩学生架着老师回教室上晚自习)
-1. [“双十一”为什么越来越冷清](https://so.toutiao.com/search?keyword=“双十一”为什么越来越冷清)
 1. [以方与哈马斯互指对方袭击希法医院](https://so.toutiao.com/search?keyword=以方与哈马斯互指对方袭击希法医院)
-1. [官方辟谣民政局工作人员打骂群众](https://so.toutiao.com/search?keyword=官方辟谣民政局工作人员打骂群众)
-1. [镇长砸水瓶后村民拍桌回怼？当地回应](https://so.toutiao.com/search?keyword=镇长砸水瓶后村民拍桌回怼？当地回应)
-1. [男子殴打怀孕妻子 两儿子跪地哭喊](https://so.toutiao.com/search?keyword=男子殴打怀孕妻子+两儿子跪地哭喊)
-1. [“女子遭副会长强奸”涉事纪检干部被查](https://so.toutiao.com/search?keyword=“女子遭副会长强奸”涉事纪检干部被查)
 1. [没有男生能拒绝这样的冰溜子](https://so.toutiao.com/search?keyword=没有男生能拒绝这样的冰溜子)
-1. [两小男孩地铁玩卡片引一群大人围观](https://so.toutiao.com/search?keyword=两小男孩地铁玩卡片引一群大人围观)
 1. [家长吐槽冬季校服拆开里面全是薄膜](https://so.toutiao.com/search?keyword=家长吐槽冬季校服拆开里面全是薄膜)
-1. [大学生偷返高中 老师表情亮了](https://so.toutiao.com/search?keyword=大学生偷返高中+老师表情亮了)
 1. [记者：快船让四球星首发没有好效果](https://so.toutiao.com/search?keyword=记者：快船让四球星首发没有好效果)
-1. [以方称哈马斯已失去对加沙北部控制](https://so.toutiao.com/search?keyword=以方称哈马斯已失去对加沙北部控制)
 1. [沙特王储呼吁尽快结束巴以冲突](https://so.toutiao.com/search?keyword=沙特王储呼吁尽快结束巴以冲突)
-1. [麻省理工亲巴组织阻止犹太学生上课](https://so.toutiao.com/search?keyword=麻省理工亲巴组织阻止犹太学生上课)
-1. [马斯克就反攻给泽连斯基提建议](https://so.toutiao.com/search?keyword=马斯克就反攻给泽连斯基提建议)
-1. [巴以新一轮冲突进入第36天](https://so.toutiao.com/search?keyword=巴以新一轮冲突进入第36天)
 1. [哈登：我需要10场比赛看看进展如何](https://so.toutiao.com/search?keyword=哈登：我需要10场比赛看看进展如何)
-1. [这届年轻人双11消费变了](https://so.toutiao.com/search?keyword=这届年轻人双11消费变了)
-1. [伊朗：是时候就加沙局势采取行动了](https://so.toutiao.com/search?keyword=伊朗：是时候就加沙局势采取行动了)
 1. [坍塌体育馆为何多次检查查不出问题](https://so.toutiao.com/search?keyword=坍塌体育馆为何多次检查查不出问题)
-1. [银行回应信用卡欠3.1万未还变40万](https://so.toutiao.com/search?keyword=银行回应信用卡欠3.1万未还变40万)
-1. [毒地块居民称120万买房85万没人要](https://so.toutiao.com/search?keyword=毒地块居民称120万买房85万没人要)
-1. [独生子推两个轮椅带双亲外出买菜](https://so.toutiao.com/search?keyword=独生子推两个轮椅带双亲外出买菜)
-1. [京东：约300个品牌销售额破亿](https://so.toutiao.com/search?keyword=京东：约300个品牌销售额破亿)
 1. [拜登与阿曼苏丹讨论加沙事态发展](https://so.toutiao.com/search?keyword=拜登与阿曼苏丹讨论加沙事态发展)
 1. [来海南万宁体验冲浪乐趣](https://so.toutiao.com/search?keyword=来海南万宁体验冲浪乐趣)
-1. [房地产政策效果正在显现](https://so.toutiao.com/search?keyword=房地产政策效果正在显现)
 1. [李显龙：不认为大陆会对台湾动武](https://so.toutiao.com/search?keyword=李显龙：不认为大陆会对台湾动武)
 1. [陕西投资集团原董事长袁小宁被查](https://so.toutiao.com/search?keyword=陕西投资集团原董事长袁小宁被查)
 1. [起底贩卖出生证的佛山福爱嘉医院](https://so.toutiao.com/search?keyword=起底贩卖出生证的佛山福爱嘉医院)
 1. [火箭五连胜期间合计净胜对手89分](https://so.toutiao.com/search?keyword=火箭五连胜期间合计净胜对手89分)
-1. [陕西回应强砍3万棵国槐：违规占用](https://so.toutiao.com/search?keyword=陕西回应强砍3万棵国槐：违规占用)
-1. [郑恺：旅行可以拉近人与人的距离](https://so.toutiao.com/search?keyword=郑恺：旅行可以拉近人与人的距离)
 1. [曼联近5场英超4胜仅负曼城](https://so.toutiao.com/search?keyword=曼联近5场英超4胜仅负曼城)
-1. [皇马5-1瓦伦数据对比：射门16-10](https://so.toutiao.com/search?keyword=皇马5-1瓦伦数据对比：射门16-10)
 1. [国足36强赛首战泰国目标带回3分](https://so.toutiao.com/search?keyword=国足36强赛首战泰国目标带回3分)
 1. [张杰晒和三个女儿的背影照](https://so.toutiao.com/search?keyword=张杰晒和三个女儿的背影照)
-1. [英媒为曼联评分：林德洛夫8分最高](https://so.toutiao.com/search?keyword=英媒为曼联评分：林德洛夫8分最高)
 1. [美国一女子将已故丈夫骨灰植入体内](https://so.toutiao.com/search?keyword=美国一女子将已故丈夫骨灰植入体内)
-1. [校方回应女生在图书馆占16座还骂人](https://so.toutiao.com/search?keyword=校方回应女生在图书馆占16座还骂人)
-1. [国家一级导演车径行去世](https://so.toutiao.com/search?keyword=国家一级导演车径行去世)
 1. [海口一镇长开会怒砸水瓶 当地回应](https://so.toutiao.com/search?keyword=海口一镇长开会怒砸水瓶+当地回应)
 1. [东北虎出没 黑龙江虎林发紧急通知](https://so.toutiao.com/search?keyword=东北虎出没+黑龙江虎林发紧急通知)
 1. [美议员被批煽动巴勒斯坦人种族灭绝](https://so.toutiao.com/search?keyword=美议员被批煽动巴勒斯坦人种族灭绝)
 1. [天猫称双11订单量成交总额全面增长](https://so.toutiao.com/search?keyword=天猫称双11订单量成交总额全面增长)
-1. [男子喂猪时晕倒 遭猪啃食下半身](https://so.toutiao.com/search?keyword=男子喂猪时晕倒+遭猪啃食下半身)
-1. [“双11”透视：“多巴胺经济”爆发](https://so.toutiao.com/search?keyword=“双11”透视：“多巴胺经济”爆发)
-1. [加沙最大医院39名婴儿因断电缺氧死亡](https://so.toutiao.com/search?keyword=加沙最大医院39名婴儿因断电缺氧死亡)
 1. [拜仁总监：凯恩是现象级球员](https://so.toutiao.com/search?keyword=拜仁总监：凯恩是现象级球员)
 1. [院士：计算机是怎么越来越快的](https://so.toutiao.com/search?keyword=院士：计算机是怎么越来越快的)
 1. [民警收到YYDS锦旗后表情绷不住了](https://so.toutiao.com/search?keyword=民警收到YYDS锦旗后表情绷不住了)
@@ -74,9 +92,7 @@
 1. [老虎出没 村民喂狗发现只剩狗头](https://so.toutiao.com/search?keyword=老虎出没+村民喂狗发现只剩狗头)
 1. [马克龙呼吁以色列停止轰炸加沙平民](https://so.toutiao.com/search?keyword=马克龙呼吁以色列停止轰炸加沙平民)
 1. [沙特-非洲峰会呼吁实现加沙停火](https://so.toutiao.com/search?keyword=沙特-非洲峰会呼吁实现加沙停火)
-1. [70个国家和地区呼吁结束巴以冲突](https://so.toutiao.com/search?keyword=70个国家和地区呼吁结束巴以冲突)
 1. [厄尔尼诺已形成 今年或破最暖年纪录](https://so.toutiao.com/search?keyword=厄尔尼诺已形成+今年或破最暖年纪录)
-1. [女方悔婚不退彩礼被砍杀？警方介入](https://so.toutiao.com/search?keyword=女方悔婚不退彩礼被砍杀？警方介入)
 1. [钟南山说有6种新冠病毒疫苗可选择](https://so.toutiao.com/search?keyword=钟南山说有6种新冠病毒疫苗可选择)
 1. [加沙地带已有超过1.1万人死亡](https://so.toutiao.com/search?keyword=加沙地带已有超过1.1万人死亡)
 1. [三家人权组织状告以色列](https://so.toutiao.com/search?keyword=三家人权组织状告以色列)
@@ -101,7 +117,6 @@
 1. [男子在江心发现生锈保险箱](https://so.toutiao.com/search?keyword=男子在江心发现生锈保险箱)
 1. [年终消费旺季到来 什么商品卖得好](https://so.toutiao.com/search?keyword=年终消费旺季到来+什么商品卖得好)
 1. [海南下月起全面禁用生鲜灯](https://so.toutiao.com/search?keyword=海南下月起全面禁用生鲜灯)
-1. [男子杀害工友潜入深山19年后落网](https://so.toutiao.com/search?keyword=男子杀害工友潜入深山19年后落网)
 1. [第19届中国模拟联合国大会开幕](https://so.toutiao.com/search?keyword=第19届中国模拟联合国大会开幕)
 1. [女子被广告牌“前后夹击”](https://so.toutiao.com/search?keyword=女子被广告牌“前后夹击”)
 1. [公安部督办非法机顶盒大案告破](https://so.toutiao.com/search?keyword=公安部督办非法机顶盒大案告破)
