--- a/archives/toutiao-search/2023-11-12.md
+++ b/archives/toutiao-search/2023-11-12.md
@@ -1,62 +1,77 @@
 # 2023-11-12
 
-共 215 条
+共 229 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Sun Nov 12 2023 13:00:38 GMT+0800 (China Standard Time) -->
-1. [低价硝烟下天猫京东公布双11战绩](https://so.toutiao.com/search?keyword=低价硝烟下天猫京东公布双11战绩)
+<!-- 最后更新时间 Sun Nov 12 2023 14:00:46 GMT+0800 (China Standard Time) -->
 1. [警方公开通缉缅北果敢4名电诈头目](https://so.toutiao.com/search?keyword=警方公开通缉缅北果敢4名电诈头目)
-1. [全国秋粮收获已过九成半](https://so.toutiao.com/search?keyword=全国秋粮收获已过九成半)
-1. [男子杀人逃深山 养8只恶犬防身](https://so.toutiao.com/search?keyword=男子杀人逃深山+养8只恶犬防身)
 1. [“双十一”为什么越来越冷清](https://so.toutiao.com/search?keyword=“双十一”为什么越来越冷清)
-1. [大学生偷返高中 老师表情亮了](https://so.toutiao.com/search?keyword=大学生偷返高中+老师表情亮了)
-1. [大批中国公民滞留俄罗斯？官方回应](https://so.toutiao.com/search?keyword=大批中国公民滞留俄罗斯？官方回应)
-1. [老人反对装电梯建好又想用被拒绝](https://so.toutiao.com/search?keyword=老人反对装电梯建好又想用被拒绝)
-1. [双11电商巨头未公布总交易量](https://so.toutiao.com/search?keyword=双11电商巨头未公布总交易量)
-1. [独生子推两个轮椅带双亲外出买菜](https://so.toutiao.com/search?keyword=独生子推两个轮椅带双亲外出买菜)
+1. [全国秋粮收获已过九成半](https://so.toutiao.com/search?keyword=全国秋粮收获已过九成半)
+1. [东北一校8名男生集体穿军大衣上课](https://so.toutiao.com/search?keyword=东北一校8名男生集体穿军大衣上课)
+1. [低价硝烟下天猫京东公布双11战绩](https://so.toutiao.com/search?keyword=低价硝烟下天猫京东公布双11战绩)
+1. [湖北襄阳贩卖出生证医院6人被批捕](https://so.toutiao.com/search?keyword=湖北襄阳贩卖出生证医院6人被批捕)
+1. [制片人可以内定演员吗](https://so.toutiao.com/search?keyword=制片人可以内定演员吗)
+1. [0713回应陈楚生16年后又夺冠](https://so.toutiao.com/search?keyword=0713回应陈楚生16年后又夺冠)
+1. [大连鬼秤检测结果出炉 官方调查](https://so.toutiao.com/search?keyword=大连鬼秤检测结果出炉+官方调查)
+1. [官方通报小学食堂疑吃出鼠头：系兔头](https://so.toutiao.com/search?keyword=官方通报小学食堂疑吃出鼠头：系兔头)
 1. [镇长砸水瓶后村民拍桌回怼？当地回应](https://so.toutiao.com/search?keyword=镇长砸水瓶后村民拍桌回怼？当地回应)
 1. [广州一工地挖破燃气管道？假的](https://so.toutiao.com/search?keyword=广州一工地挖破燃气管道？假的)
-1. [温州民房坍塌4人遇难](https://so.toutiao.com/search?keyword=温州民房坍塌4人遇难)
 1. [媒体：加沙巷战以军“不败而败”](https://so.toutiao.com/search?keyword=媒体：加沙巷战以军“不败而败”)
-1. [这届年轻人双11消费变了](https://so.toutiao.com/search?keyword=这届年轻人双11消费变了)
-1. [爸爸喝醉把儿子忘地铁上了](https://so.toutiao.com/search?keyword=爸爸喝醉把儿子忘地铁上了)
-1. [东北一校8名男生集体穿军大衣上课](https://so.toutiao.com/search?keyword=东北一校8名男生集体穿军大衣上课)
-1. [白鹿为报秦霄贤的仇等了两个月](https://so.toutiao.com/search?keyword=白鹿为报秦霄贤的仇等了两个月)
 1. [男子申请强执12万获赔1600只鹅](https://so.toutiao.com/search?keyword=男子申请强执12万获赔1600只鹅)
-1. [“双11”透视：“多巴胺经济”爆发](https://so.toutiao.com/search?keyword=“双11”透视：“多巴胺经济”爆发)
-1. [以方称哈马斯已失去对加沙北部控制](https://so.toutiao.com/search?keyword=以方称哈马斯已失去对加沙北部控制)
-1. [巴勒斯坦支持者聚集在拜登家附近](https://so.toutiao.com/search?keyword=巴勒斯坦支持者聚集在拜登家附近)
-1. [伊朗：是时候就加沙局势采取行动了](https://so.toutiao.com/search?keyword=伊朗：是时候就加沙局势采取行动了)
-1. [加沙最大医院39名婴儿因断电缺氧死亡](https://so.toutiao.com/search?keyword=加沙最大医院39名婴儿因断电缺氧死亡)
 1. [男子喂猪时晕倒 遭猪啃食下半身](https://so.toutiao.com/search?keyword=男子喂猪时晕倒+遭猪啃食下半身)
+1. [大批中国公民滞留俄罗斯？官方回应](https://so.toutiao.com/search?keyword=大批中国公民滞留俄罗斯？官方回应)
+1. [温州民房坍塌4人遇难](https://so.toutiao.com/search?keyword=温州民房坍塌4人遇难)
+1. [国家一级导演车径行去世](https://so.toutiao.com/search?keyword=国家一级导演车径行去世)
+1. [这届年轻人双11消费变了](https://so.toutiao.com/search?keyword=这届年轻人双11消费变了)
+1. [叙利亚大使：望山东商界参与叙重建](https://so.toutiao.com/search?keyword=叙利亚大使：望山东商界参与叙重建)
+1. [以方称哈马斯已失去对加沙北部控制](https://so.toutiao.com/search?keyword=以方称哈马斯已失去对加沙北部控制)
+1. [德国文化界这次为何没有声援以色列](https://so.toutiao.com/search?keyword=德国文化界这次为何没有声援以色列)
+1. [伊朗：是时候就加沙局势采取行动了](https://so.toutiao.com/search?keyword=伊朗：是时候就加沙局势采取行动了)
+1. [男子杀人逃深山 养8只恶犬防身](https://so.toutiao.com/search?keyword=男子杀人逃深山+养8只恶犬防身)
+1. [大学生偷返高中 老师表情亮了](https://so.toutiao.com/search?keyword=大学生偷返高中+老师表情亮了)
+1. [民警收到YYDS锦旗后表情绷不住了](https://so.toutiao.com/search?keyword=民警收到YYDS锦旗后表情绷不住了)
 1. [女方悔婚不退彩礼被砍杀？警方介入](https://so.toutiao.com/search?keyword=女方悔婚不退彩礼被砍杀？警方介入)
+1. [加沙最大医院39名婴儿因断电缺氧死亡](https://so.toutiao.com/search?keyword=加沙最大医院39名婴儿因断电缺氧死亡)
+1. [女子看守所探监 等待中吸毒被捕](https://so.toutiao.com/search?keyword=女子看守所探监+等待中吸毒被捕)
+1. [爸爸喝醉把儿子忘地铁上了](https://so.toutiao.com/search?keyword=爸爸喝醉把儿子忘地铁上了)
+1. [白鹿为报秦霄贤的仇等了两个月](https://so.toutiao.com/search?keyword=白鹿为报秦霄贤的仇等了两个月)
+1. [麻省理工亲巴组织阻止犹太学生上课](https://so.toutiao.com/search?keyword=麻省理工亲巴组织阻止犹太学生上课)
+1. [天一亮时间就不属于我了](https://so.toutiao.com/search?keyword=天一亮时间就不属于我了)
+1. [勇士vs骑士述评：汤追双重伤害](https://so.toutiao.com/search?keyword=勇士vs骑士述评：汤追双重伤害)
+1. [冷空气发力我国大部气温将创新低](https://so.toutiao.com/search?keyword=冷空气发力我国大部气温将创新低)
+1. [以军炮击 黎巴嫩老妇拒绝离开家乡](https://so.toutiao.com/search?keyword=以军炮击+黎巴嫩老妇拒绝离开家乡)
+1. [大四学生请假回家结婚](https://so.toutiao.com/search?keyword=大四学生请假回家结婚)
+1. [东北大哥雪洞里吃火锅](https://so.toutiao.com/search?keyword=东北大哥雪洞里吃火锅)
+1. [“双11”透视：“多巴胺经济”爆发](https://so.toutiao.com/search?keyword=“双11”透视：“多巴胺经济”爆发)
+1. [张杰晒和三个女儿的背影照](https://so.toutiao.com/search?keyword=张杰晒和三个女儿的背影照)
+1. [房地产政策效果正在显现](https://so.toutiao.com/search?keyword=房地产政策效果正在显现)
+1. [CBA前瞻：京辽大战一触即发](https://so.toutiao.com/search?keyword=CBA前瞻：京辽大战一触即发)
+1. [范志毅：中国足球输习惯了但还得踢](https://so.toutiao.com/search?keyword=范志毅：中国足球输习惯了但还得踢)
+1. [美加州郡长：对中国有意见你去过吗](https://so.toutiao.com/search?keyword=美加州郡长：对中国有意见你去过吗)
+1. [老人反对装电梯建好又想用被拒绝](https://so.toutiao.com/search?keyword=老人反对装电梯建好又想用被拒绝)
+1. [校方回应女生在图书馆占16座还骂人](https://so.toutiao.com/search?keyword=校方回应女生在图书馆占16座还骂人)
+1. [网传东方雨虹1400多名员工亏超15亿](https://so.toutiao.com/search?keyword=网传东方雨虹1400多名员工亏超15亿)
+1. [以军称空袭叙利亚武装人员基础设施](https://so.toutiao.com/search?keyword=以军称空袭叙利亚武装人员基础设施)
+1. [美媒：美军援以乌但已无法控制事态](https://so.toutiao.com/search?keyword=美媒：美军援以乌但已无法控制事态)
+1. [陕西回应强砍3万棵国槐：违规占用](https://so.toutiao.com/search?keyword=陕西回应强砍3万棵国槐：违规占用)
+1. [双11电商巨头未公布总交易量](https://so.toutiao.com/search?keyword=双11电商巨头未公布总交易量)
+1. [独生子推两个轮椅带双亲外出买菜](https://so.toutiao.com/search?keyword=独生子推两个轮椅带双亲外出买菜)
+1. [巴勒斯坦支持者聚集在拜登家附近](https://so.toutiao.com/search?keyword=巴勒斯坦支持者聚集在拜登家附近)
 1. [京东：约300个品牌销售额破亿](https://so.toutiao.com/search?keyword=京东：约300个品牌销售额破亿)
 1. [广西面包车与货车对向碰撞6死1伤](https://so.toutiao.com/search?keyword=广西面包车与货车对向碰撞6死1伤)
-1. [女子看守所探监 等待中吸毒被捕](https://so.toutiao.com/search?keyword=女子看守所探监+等待中吸毒被捕)
-1. [天一亮时间就不属于我了](https://so.toutiao.com/search?keyword=天一亮时间就不属于我了)
-1. [大四学生请假回家结婚](https://so.toutiao.com/search?keyword=大四学生请假回家结婚)
-1. [麻省理工亲巴组织阻止犹太学生上课](https://so.toutiao.com/search?keyword=麻省理工亲巴组织阻止犹太学生上课)
 1. [美媒：美国众议院已“完全失控”](https://so.toutiao.com/search?keyword=美媒：美国众议院已“完全失控”)
 1. [郑州市副市长陈宏伟已任市委常委](https://so.toutiao.com/search?keyword=郑州市副市长陈宏伟已任市委常委)
-1. [民警收到YYDS锦旗后表情绷不住了](https://so.toutiao.com/search?keyword=民警收到YYDS锦旗后表情绷不住了)
-1. [房地产政策效果正在显现](https://so.toutiao.com/search?keyword=房地产政策效果正在显现)
 1. [张译谈为《无价之宝》“献声”](https://so.toutiao.com/search?keyword=张译谈为《无价之宝》“献声”)
 1. [杜兰特：比尔的状态令人惊喜](https://so.toutiao.com/search?keyword=杜兰特：比尔的状态令人惊喜)
 1. [火箭鹈鹕裁判报告：共两次漏判](https://so.toutiao.com/search?keyword=火箭鹈鹕裁判报告：共两次漏判)
-1. [国家一级导演车径行去世](https://so.toutiao.com/search?keyword=国家一级导演车径行去世)
 1. [女生喂猴误掉手机被猴捡起研究](https://so.toutiao.com/search?keyword=女生喂猴误掉手机被猴捡起研究)
-1. [陕西回应强砍3万棵国槐：违规占用](https://so.toutiao.com/search?keyword=陕西回应强砍3万棵国槐：违规占用)
 1. [美国一架军用飞机在地中海东部坠毁](https://so.toutiao.com/search?keyword=美国一架军用飞机在地中海东部坠毁)
-1. [校方回应女生在图书馆占16座还骂人](https://so.toutiao.com/search?keyword=校方回应女生在图书馆占16座还骂人)
 1. [美众院成员两周内8次试图互相谴责](https://so.toutiao.com/search?keyword=美众院成员两周内8次试图互相谴责)
 1. [温州民房坍塌瞬间监控视频曝光](https://so.toutiao.com/search?keyword=温州民房坍塌瞬间监控视频曝光)
-1. [0713回应陈楚生16年后又夺冠](https://so.toutiao.com/search?keyword=0713回应陈楚生16年后又夺冠)
 1. [全洛阳都在好奇梦迪是谁](https://so.toutiao.com/search?keyword=全洛阳都在好奇梦迪是谁)
-1. [网传东方雨虹1400多名员工亏超15亿](https://so.toutiao.com/search?keyword=网传东方雨虹1400多名员工亏超15亿)
 1. [以方罕见公开回击美方](https://so.toutiao.com/search?keyword=以方罕见公开回击美方)
 1. [果敢同盟军为什么这么能打](https://so.toutiao.com/search?keyword=果敢同盟军为什么这么能打)
 1. [美B-21隐形轰炸机厉害在哪](https://so.toutiao.com/search?keyword=美B-21隐形轰炸机厉害在哪)
-1. [制片人可以内定演员吗](https://so.toutiao.com/search?keyword=制片人可以内定演员吗)
 1. [两小男孩地铁玩卡片引一群大人围观](https://so.toutiao.com/search?keyword=两小男孩地铁玩卡片引一群大人围观)
 1. [官方辟谣民政局工作人员打骂群众](https://so.toutiao.com/search?keyword=官方辟谣民政局工作人员打骂群众)
 1. [男子殴打怀孕妻子 两儿子跪地哭喊](https://so.toutiao.com/search?keyword=男子殴打怀孕妻子+两儿子跪地哭喊)
@@ -114,7 +129,6 @@
 1. [火箭五连胜期间合计净胜对手89分](https://so.toutiao.com/search?keyword=火箭五连胜期间合计净胜对手89分)
 1. [曼联近5场英超4胜仅负曼城](https://so.toutiao.com/search?keyword=曼联近5场英超4胜仅负曼城)
 1. [国足36强赛首战泰国目标带回3分](https://so.toutiao.com/search?keyword=国足36强赛首战泰国目标带回3分)
-1. [张杰晒和三个女儿的背影照](https://so.toutiao.com/search?keyword=张杰晒和三个女儿的背影照)
 1. [美国一女子将已故丈夫骨灰植入体内](https://so.toutiao.com/search?keyword=美国一女子将已故丈夫骨灰植入体内)
 1. [海口一镇长开会怒砸水瓶 当地回应](https://so.toutiao.com/search?keyword=海口一镇长开会怒砸水瓶+当地回应)
 1. [东北虎出没 黑龙江虎林发紧急通知](https://so.toutiao.com/search?keyword=东北虎出没+黑龙江虎林发紧急通知)
